feat: advance AOSP ART JIT compatibility